--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-    margin-top: 150px;
+    margin: 150px 0 30px 0;
 }
 
 header h1 {
@@ -38,8 +38,14 @@ main {
     margin: 8px;
     padding: 30px;
     font-size: 40px;
+    font-weight: bold;
     border: 2px solid #FFF;
     cursor: pointer;
+}
+
+.key.active {
+    border: 2px solid #FF0;
+    color: #FF0;
 }
 
 .compositor {
@@ -64,6 +70,12 @@ main {
     font-size: 18px;
     border: 2px solid #FFF;
     cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+#tocar:hover {
+    background-color: #FFF;
+    color: #383838;
 }
 
 footer {
